--- a/src/pages/LoginRegister/Register.css
+++ b/src/pages/LoginRegister/Register.css
@@ -3,7 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400&display=swap');
 
-
+::placeholder{
+    font-family: "Josefin Sans";
+}
+input[type="text"],input[type="email"],input[type="password"]{
+    font-family: "Josefin Sans", sans-serif;
+    
+  }
 .register_container{
     height: 100vh;
     width: 100vw;
@@ -16,6 +22,7 @@
     background-color: aliceblue;
     border-radius: 10px;
     padding: 15px 55px;
+    min-width: 20vw;
 }
 
 .register_name,.register_text{
@@ -35,14 +42,24 @@ font-weight: 600;
 
 .register_details{
     display: flex;
+    font-family: "Josefin Sans";
     flex-direction: column;
 }
-.register_details>input{
+.password_wrapper{
+    display: flex;
+    
+}
+.register_details>input,.password_wrapper>input{
     padding: 1rem;
     outline: 0;
     background: transparent;
     border: none;
     border-bottom: 1.5px solid rgb(233, 236, 240);
+}
+.eye{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .register_details>input:focus{
     border-bottom: 1.5px solid rgb(160, 152, 152);
