working on chatsection css

--- a/src/pages/ChatPage/ChatPage.css
+++ b/src/pages/ChatPage/ChatPage.css
@@ -99,6 +99,7 @@ background: rgb(36, 59, 134);
 .chatsection {
   grid-area: chatsection;
   background: rgb(235, 218, 241);
+  overflow-y: scroll;
 }
 
 .messagecontrol input[type="text"]{
