--- a/src/pages/LoginRegister/Register.css
+++ b/src/pages/LoginRegister/Register.css
@@ -56,6 +56,10 @@ font-weight: 600;
     border: none;
     border-bottom: 1.5px solid rgb(233, 236, 240);
 }
+.password_wrapper>input:focus{
+    border-bottom: 1.5px solid rgb(160, 152, 152);
+}
+
 .eye{
     display: flex;
     align-items: center;
