--- a/src/pages/ChatPage/ChatPage.css
+++ b/src/pages/ChatPage/ChatPage.css
@@ -124,6 +124,7 @@ background: rgb(36, 59, 134);
 .messagecontrol ul *{
   margin: 0 5px;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .messagecontrol ul button{
