--- a/src/pages/LoginRegister/Register.css
+++ b/src/pages/LoginRegister/Register.css
@@ -10,6 +10,10 @@ input[type="text"],input[type="email"],input[type="password"]{
     font-family: "Josefin Sans", sans-serif;
     
   }
+button *{
+    text-decoration: none;
+    color:aliceblue;
+}
 .register_container{
     height: 100vh;
     width: 100vw;
